--- a/src/styles/Projects.scss
+++ b/src/styles/Projects.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 
   hr {
     width: 100px;
@@ -14,13 +16,13 @@
   }
 
   h6 {
+    font-weight: 300;
     width: 90%;
     text-transform: uppercase;
     text-align: center;
     margin: 0 auto 4rem auto;
     padding: 2rem;
-    font-size: 1em;
-    font-weight: 500;
+    font-size: 3.15rem;
   }
 
   p {
@@ -44,90 +46,110 @@
     }
   }
 
-  div {
-    align-self: center;
-    margin: 0 auto;
-    height: 43rem;
-    transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);
-    padding: 0;
-    background-color: transparent;
-    transition: all 0.2s ease, transform 0.2s cubic-bezier(0.03, 0.98, 0.52, 0.99);
-    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.3);
-    color: #ddd;
-    position: relative;
-    border-radius: 1rem;
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
-    will-change: transform;
-    margin-bottom: 2rem;
-    width: 100%;
+  .tilt {
+    width: 60% !important;
+    padding: 0 !important;
 
-    figure {
-      margin: 0;
+    .project-div {
+      align-self: center;
+      margin: 0 auto;
+      transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);
+      padding: 0;
+      background-color: transparent;
+      transition: all 0.2s ease, transform 0.2s cubic-bezier(0.03, 0.98, 0.52, 0.99);
+      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.3);
+      color: #ddd;
+      position: relative;
       border-radius: 1rem;
-      overflow: hidden;
-      height: 100%;
+      transform-style: preserve-3d;
+      backface-visibility: hidden;
+      will-change: transform;
+      width: 100%;
 
-      img {
-        width: 100%;
-        display: block;
-        transition: all 0.3s ease;
-        margin: auto;
+      figure {
+        margin: 0;
+        border-radius: 1rem;
         overflow: hidden;
+
+        img {
+          width: 100%;
+          display: block;
+          transition: all 0.3s ease;
+          margin: auto;
+          overflow: hidden;
+        }
       }
     }
+  }
 
-    footer {
-      position: absolute;
-      bottom: 2rem;
-      left: 1.5rem;
-      padding: 0.75rem 1rem;
-      transform: translateZ(3rem);
-      background-color: rgba(0, 0, 0, 0.5);
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-      width: 90%;
+  .project-description {
+    padding: 0.75rem 1rem;
+    transform: translateZ(3rem);
+    border: 0.1rem solid rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    margin: 2rem 0 10rem 0;
+    border-radius: 1rem;
+    width: 60%;
 
-      h4 {
-        margin: 0;
-        line-height: 1.2;
-        color: #fff;
-        font-weight: 400;
-        text-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 40px #000;
-        font-size: 1.4em;
-      }
+    h4 {
+      margin: 1rem 0;
+      line-height: 1.2;
+      font-weight: 400;
+      font-size: 1.4em;
+    }
 
-      small {
-        font-size: 1.2rem;
-        letter-spacing: 1px;
-        text-transform: uppercase;
-        color: #eee;
-        font-weight: 700;
-        text-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 1px 40px #000;
-      }
+    small {
+      font-size: 1.2rem;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      font-weight: 700;
+      margin: 1rem 0;
+    }
 
-      p {
-        color: #eee;
-        text-shadow: 0 1px 8px rgba(0, 0, 0, 0.4), 0 0 20px rgba(0, 0, 0, 0.4);
-        width: 100%;
-        text-align: left;
-        margin-bottom: 0;
-        margin-top: 0;
-      }
+    p {
+      width: 100%;
+      text-align: left;
+      margin: 1rem 0;
+    }
 
-      a {
-        margin-right: 2rem;
-        color: #fff;
-        font-size: 1.6rem;
-      }
+    a {
+      margin: 1rem 2rem 1rem 0;
+      font-size: 1.6rem;
+      transition: color 0.2s ease;
+      color: #1a9f60;
+      text-decoration: none;
+      font-weight: 700;
     }
   }
 }
 
 @media only screen and (max-width: 600px) {
   .Projects {
-    div {
-      footer {
-        width: 82%;
+    h6 {
+      font-size: 2.15rem;
+    }
+
+    .tilt {
+      width: 80% !important;
+    }
+
+    .project-description {
+      width: 80%;
+
+      h4 {
+        font-size: 1rem;
+      }
+
+      small {
+        font-size: 0.8rem;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+
+      a {
+        font-size: 1rem;
       }
     }
   }
